--- a/Android/app/src/main/res/layout/activity_intro.xml
+++ b/Android/app/src/main/res/layout/activity_intro.xml
@@ -6,20 +6,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context="com.pread.yoursoulmate.activity.IntroActivity">
 
     <TextView
-        android:id="@+id/tv_input_fingerprint"
-        android:text="@string/input_fingerprint"
-        android:textSize="40sp"
+        android:text="Loading"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ImageView
-        android:id="@+id/iv_fingerprint"
-        android:background="@anim/fingerprint_anim"
-        android:layout_below="@id/tv_input_fingerprint"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
 </RelativeLayout>
