android - Facebook SDK 추가및 결과 Link share기능 추가, 카카오스토리 support v4 라이브러리 교체(Facebook SDK에서 사용하는 버전으로 교체)

--- a/android/res/layout/activity_intro.xml
+++ b/android/res/layout/activity_intro.xml
@@ -9,7 +9,7 @@
     tools:context="com.pread.yoursoulmate.activity.IntroActivity">
 
     <TextView
-        android:text="Loading"
+        android:text="@string/loading"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
