--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -6,20 +6,31 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/tv_input_fingerprint"
         android:text="@string/input_fingerprint"
         android:textSize="40sp"
+        android:background="#FFFFFF"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/iv_fingerprint"
-        android:background="@anim/fingerprint_anim"
-        android:layout_below="@id/tv_input_fingerprint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/tv_input_fingerprint"
+        android:src="@drawable/fingerprint"
+        tools:ignore="ContentDescription" />
+
+    <TextView 
+        android:id="@+id/tv_fingerprint_shadow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tv_input_fingerprint"
+        android:background="#FFFFFF"
         />
 </RelativeLayout>
