--- a/android/res/layout/activity_result.xml
+++ b/android/res/layout/activity_result.xml
@@ -6,12 +6,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#FFFFFF"
     tools:context="com.pread.yoursoulmate.activity.ResultActivity">
 
     <TextView
         android:id="@+id/tv_result_title"
         android:text="@string/result"
         android:textSize="50sp"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -19,6 +21,7 @@
         android:id="@+id/tv_result"
         android:layout_below="@id/tv_result_title"
         android:textSize="30sp"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
