--- a/kakao-android-sdk-project-1.0.35/templates/loginbase-template/res/layout/kakao_login.xml
+++ b/kakao-android-sdk-project-1.0.35/templates/loginbase-template/res/layout/kakao_login.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom">
+    android:gravity="bottom"
+    android:background="#FFFFFF">
 
     <com.kakao.widget.LoginButton
         android:id="@+id/com_kakao_login"
