--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -2,35 +2,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity" >
 
     <TextView
         android:id="@+id/tv_input_fingerprint"
-        android:text="@string/input_fingerprint"
-        android:textSize="40sp"
-        android:background="#FFFFFF"
-        android:textColor="#000000"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:text="@string/input_fingerprint"
+        android:textColor="#000000"
+        android:textSize="40sp" />
 
     <ImageView
         android:id="@+id/iv_fingerprint"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tv_input_fingerprint"
-        android:src="@drawable/fingerprint"
+        android:src="@drawable/half"
         tools:ignore="ContentDescription" />
 
-    <TextView 
+    <TextView
         android:id="@+id/tv_fingerprint_shadow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_input_fingerprint"
-        android:background="#FFFFFF"
-        />
+        android:background="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tv_fingerprint_scanbar"
+        android:layout_width="match_parent"
+        android:visibility="invisible"
+        android:layout_height="1dp"
+        android:layout_below="@id/tv_input_fingerprint"
+        android:background="#FF0000" />
+
 </RelativeLayout>
