--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
@@ -8,16 +9,25 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
+    
     <TextView
         android:id="@+id/tv_input_fingerprint"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
         android:text="@string/input_fingerprint"
         android:textColor="#000000"
         android:textSize="40sp" />
 
+ 
+    
+      
+    <com.pread.yoursoulmate.view.DrawingView
+        android:id="@+id/dv_fingerprint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <!--
     <ImageView
         android:id="@+id/iv_fingerprint"
         android:layout_width="wrap_content"
@@ -25,6 +35,7 @@
         android:layout_below="@id/tv_input_fingerprint"
         android:src="@drawable/half"
         tools:ignore="ContentDescription" />
+    -->
 
     <TextView
         android:id="@+id/tv_fingerprint_shadow"
@@ -36,9 +47,19 @@
     <TextView
         android:id="@+id/tv_fingerprint_scanbar"
         android:layout_width="match_parent"
-        android:visibility="invisible"
         android:layout_height="1dp"
         android:layout_below="@id/tv_input_fingerprint"
-        android:background="#FF0000" />
+        android:background="#FF0000"
+        android:visibility="invisible" />
+
+     <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+      	android:layout_alignParentBottom="true"
+      	android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id" >
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
