--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -1,65 +1,51 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
-    
-    <TextView
-        android:id="@+id/tv_input_fingerprint"
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#FFFFFF"
-        android:text="@string/input_fingerprint"
-        android:textColor="#000000"
-        android:textSize="40sp" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
- 
-    
-      
-    <com.pread.yoursoulmate.view.DrawingView
-        android:id="@+id/dv_fingerprint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_input_fingerprint"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:text="@string/input_fingerprint"
+            android:textColor="#000000"
+            android:textSize="40sp" />
 
-    <!--
-    <ImageView
-        android:id="@+id/iv_fingerprint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_input_fingerprint"
-        android:src="@drawable/half"
-        tools:ignore="ContentDescription" />
-    -->
+        <com.pread.yoursoulmate.view.DrawingView
+            android:id="@+id/dv_fingerprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/tv_fingerprint_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tv_input_fingerprint"
-        android:background="#FFFFFF" />
+        <TextView
+            android:id="@+id/tv_fingerprint_shadow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tv_input_fingerprint"
+            android:background="#FFFFFF" />
 
-    <TextView
-        android:id="@+id/tv_fingerprint_scanbar"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/tv_input_fingerprint"
-        android:background="#FF0000"
-        android:visibility="invisible" />
+        <TextView
+            android:id="@+id/tv_fingerprint_scanbar"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/tv_input_fingerprint"
+            android:background="#FF0000"
+            android:visibility="invisible" />
+    </RelativeLayout>
 
-     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-      	android:layout_alignParentBottom="true"
-      	android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" >
-    </com.google.android.gms.ads.AdView>
+    <include layout="@layout/layout_ad" />
 
-</RelativeLayout>
+</LinearLayout>
