--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:text="@string/input_fingerprint"
             android:textColor="#000000"
             android:textSize="40sp" />
-
+<!-- 
         <com.pread.yoursoulmate.view.DrawingView
             android:id="@+id/dv_fingerprint"
             android:layout_width="wrap_content"
@@ -36,16 +36,16 @@
             android:layout_height="match_parent"
             android:layout_below="@id/tv_input_fingerprint"
             android:background="#FFFFFF" />
-
         <TextView
             android:id="@+id/tv_fingerprint_scanbar"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/tv_input_fingerprint"
             android:background="#FF0000"
-            android:visibility="invisible" />
+            android:visibility="visible" />
+             -->
     </RelativeLayout>
-
+    <include layout="@layout/layout_fingerprint_scanner" />
     <include layout="@layout/layout_ad" />
 
 </LinearLayout>
