--- a/android/res/layout/layout_ad.xml
+++ b/android/res/layout/layout_ad.xml
@@ -8,7 +8,7 @@
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        ads:adSize="BANNER"
+        ads:adSize="SMART_BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" >
     </com.google.android.gms.ads.AdView>
 </FrameLayout>
