--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -24,28 +24,20 @@
             android:text="@string/input_fingerprint"
             android:textColor="#000000"
             android:textSize="40sp" />
-<!-- 
-        <com.pread.yoursoulmate.view.DrawingView
-            android:id="@+id/dv_fingerprint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_fingerprint_shadow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/tv_input_fingerprint"
-            android:background="#FFFFFF" />
-        <TextView
-            android:id="@+id/tv_fingerprint_scanbar"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@id/tv_input_fingerprint"
-            android:background="#FF0000"
-            android:visibility="visible" />
-             -->
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_status"
+        android:textColor="#FFFFFFFF"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:textSize="15sp" />
+
     <include layout="@layout/layout_fingerprint_scanner" />
+
     <include layout="@layout/layout_ad" />
 
 </LinearLayout>
