--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -4,36 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/space1"
     tools:context=".MainActivity" >
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/tv_input_fingerprint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+  		android:paddingTop="20dp"
+        android:background="#000000"
+        android:text="@string/your_soulmate_is"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/tv_result"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#FFFFFF"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
-
-        <TextView
-            android:id="@+id/tv_input_fingerprint"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:text="@string/input_fingerprint"
-            android:textColor="#000000"
-            android:textSize="40sp" />
-    </RelativeLayout>
+        android:textSize="20sp"
+        android:paddingTop="10dp"
+    	android:layout_weight="1"
+        />
 
     <TextView
         android:id="@+id/tv_status"
-        android:textColor="#FFFFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#787E7EBD"
         android:gravity="center"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:textColor="#FFFFFFFF"
         android:textSize="15sp" />
 
     <include layout="@layout/layout_fingerprint_scanner" />
