--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -1,16 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#000000"
     tools:context=".MainActivity" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#FFFFFF"
+        android:background="#000000"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -20,9 +20,9 @@
             android:id="@+id/tv_input_fingerprint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:background="#000000"
             android:text="@string/input_fingerprint"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="40sp" />
 
         <com.pread.yoursoulmate.view.DrawingView
@@ -30,6 +30,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <ImageView
+            android:id="@+id/iv_fingerprint_scanner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_input_fingerprint"
+            android:background="@drawable/scanner"
+            tools:ignore="ContentDescription" />
+        
         <TextView
             android:id="@+id/tv_fingerprint_shadow"
             android:layout_width="match_parent"
