--- a/android/res/layout/activity_result.xml
+++ b/android/res/layout/activity_result.xml
@@ -6,14 +6,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFFFFF"
+    android:background="#000000"
     tools:context="com.pread.yoursoulmate.activity.ResultActivity">
 
     <TextView
         android:id="@+id/tv_result_title"
         android:text="@string/result"
         android:textSize="50sp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -28,7 +28,7 @@
     <Button
         android:id="@+id/btn_again"
         android:layout_below="@id/tv_result"
-        android:text="@string/retry"
+		android:background="@drawable/retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
@@ -36,7 +36,7 @@
         android:id="@+id/btn_post_kakaostory"
         android:layout_alignTop="@id/btn_again"
         android:layout_toRightOf="@id/btn_again"
-        android:text="@string/kakaostory"
+        android:background="@drawable/kakaostory_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
@@ -44,6 +44,7 @@
         android:id="@+id/btn_post_facebook"
         android:layout_alignTop="@id/btn_again"
         android:layout_toRightOf="@id/btn_post_kakaostory"
+        android:background="@drawable/com_facebook_inverse_icon"
         android:text="@string/facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
