--- a/android/res/layout/activity_facebook_posting.xml
+++ b/android/res/layout/activity_facebook_posting.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFF"
-    android:orientation="vertical" >
+    android:layout_height="fill_parent" >
+
+    <TextView
+        android:id="@+id/tv_facebook_posting_close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/x"
+        android:textSize="30sp"
+        android:layout_margin="5dp"
+        android:layout_alignParentRight="true"
+        android:textColor="#FFFFFF" />
 
     <com.facebook.widget.LoginButton
         android:id="@+id/authButton"
@@ -14,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        facebook:login_text="Login with Facebook"
+        facebook:login_text="페이스북 로그인"
         facebook:logout_text="Logout" />
 
 </RelativeLayout>
