android - 종료 다이얼로그 추가, app icon 수정

--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -72,6 +72,6 @@
 
     <include layout="@layout/layout_fingerprint_scanner" />
 
-    <include layout="@layout/layout_ad" />
+    <include layout="@layout/layout_banner_ad" />
 
 </LinearLayout>
