--- a/android/res/layout/activity_facebook_posting.xml
+++ b/android/res/layout/activity_facebook_posting.xml
@@ -22,6 +22,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         facebook:login_text="페이스북 로그인"
-        facebook:logout_text="Logout" />
+        facebook:logout_text="페이스북 로그아웃" />
 
 </RelativeLayout>
