--- a/android/res/values/ad_strings.xml
+++ b/android/res/values/ad_strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="banner_ad_unit_id">ca-app-pub-9958191235332980/3935613358</string>
+    <string name="medium_rect_ad_unit_id">ca-app-pub-9958191235332980/8655884152</string>
 </resources>
