android - 종료 다이얼로그 버튼 수정, 초기 로딩화면 수정

--- a/android/res/layout/activity_facebook_login.xml
+++ b/android/res/layout/activity_facebook_login.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        facebook:login_text="페이스북 로그인"
-        facebook:logout_text="페이스북 로그아웃" />
+        facebook:login_text="페이스북 계정으로 로그인"
+        facebook:logout_text="로그아웃" />
 
 </RelativeLayout>
