--- a/android/res/layout/activity_intro.xml
+++ b/android/res/layout/activity_intro.xml
@@ -8,9 +8,20 @@
     <TextView
         android:id="@+id/tv_intro_loading"
         android:text="@string/loading"
-        android:textSize="35sp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
+    <TextView 
+        android:id="@+id/tv_touch_to_screen"
+        android:text="@string/touch_to_screen"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textColor="@color/white"
+        />
 </RelativeLayout>
